# PAOFLOW

./: .gitignore  AflowPI_TB.py  AflowPI_TB_lib.py  CONTRIBUTING.md  INSTALL  README  README.md  RELEASE_NOTES  TODO  VASP_examples.ipynb  VASP_examples.py  a.out  pyproject.toml  python2to3.txt  setup.py
.Older/: AflowPI_TB.py  AflowPI_TB_1.0.py  AflowPI_TB_fft_1.0.py  AflowPI_TB_lib.py  AflowPI_TB_lib_1.0.py  AflowPI_TB_lib_1.1.py  AflowPI_TB_lib_fft.py  AflowPI_TB_lib_fft_1.2.py
AflowPI_TB/: README.md
AflowPI_TB-serial/: AflowPI_TB.py  README.md  input  ttt.txt
AflowPI_TB-serial/Older/: AflowPI_TB_1.1.py  AflowPI_TB_fft.py  AflowPI_TB_fft_1.1.py  AflowPI_TB_fft_1.2.py  AflowPI_TB_fft_1.4.py  AflowPI_TB_lib_fft_1.0.py
AflowPI_TB-serial/src/: AflowPI_TB.py
AflowPI_TB/src/: AFLOWpi_TB.py
Older/: AflowPI_TB_fft_1.3.py  AflowPI_TB_lib_fft_1.3.py  input_1.1  input_fft_1.4
PAOFLOW.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: acbn0_analysis.aux  acbn0_analysis.out  acbn0_analysis.tex  acbn0_flow.dot
examples/: README  Si.pz-vbc.UPF  check_data.py  check_test.py  check_tests.py  input  main.py  main_xml.py  nscf_Si.in  proj_Si.in  run_examples.py  run_test.py  scf_Si.in
examples/PAOFLOW-tutorial/: PAO-tutorial.ipynb
examples/TBmodel-examples/: cubium.py  graphene.py  graphene2.py  kane_mele.py
examples/TBmodel_examples/: kane_mele.py
examples/TBmodels-example/: simple_cubic.py
examples/acbn0_example/: MgO.nscf.in  MgO.projwfc.in  MgO.scf.in  O.pbe-n-nc.UPF  README  main.py
examples/dielectric/: epsilon-from-H.ipynb  epsilon-from-wfc.ipynb  epsilon_examples.ipynb
examples/example-TBmodels/: graphene.py  kane_mele.py
examples/example-atomic-orbitals/: main.py  nscf.in
examples/example01/: README  input  inputfile.out  inputfile.py  inputfile.xml  kpath_points.txt  main.py  main_restart_dump.py  main_restart_load.py  nscf.in  nscf.out  nscf_Si.in  nscf_nosym.in  proj.in  (+13 more)
examples_old/: README  run_test.py
new epsilon/: PAOFLOW.py  do_epsilon.py  epsilon_PtSe2.ipynb
src/: .PAOFLOW.py.swp  1  ACBN0.py  AFLOWpiTB.py  AFLOWpi_TB.py  AflowPI_TB.py  DataController.py  ErrorHandler.py  GPAO.py  PAOFLOW.py  PAOFLOW.py.bak  PAOFLOW_class.py  PAOFLOW_taumodel.py  PAOpy.py  RELEASE_NOTES  main.py
testing/: check_test.py  run_test.py
(+2431 files in other folders)
