[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "PAOFLOW"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "License" }
authors = [{ name = "Marco Buongiorno Nardelli", email = "mbn@unt.edu" }]
keywords = ["DFT", "Hamiltonians", "PAO"]
dynamic = ["version", "description"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = ["numpy~=2.4", "scipy>=1.17,<2", "mpi4py~=4.1"]

[project.optional-dependencies]
weyl_search = ["z2pack", "tbmodels"]
graphics = ["vtk", "matplotlib"]
transport = ["pyyaml", "psutil", "pydantic"]

[project.urls]
Homepage = "https://github.com/marcobn/PAOFLOW"
